# Teeworlds-MRPG

./: .gitignore  .gitmodules  CMakeLists.txt  MRPG-database-dump.sql  README.md  bam.lua  configure.lua  database-mrpg.sql  dump-sql.sql  dump_sql-130420.sql  license.txt
.github/workflows/: build.yaml  ccpp.yml  mastersrv.yml  server.yml
Database/: MRPG_FFS1.sql  README.md
cmake/: Download_GTest_CMakeLists.txt.in  FindCEGUI.cmake  FindCrypto.cmake  FindCurl.cmake  FindDiscordGameSDK.cmake  FindFreetype.cmake  FindGLEW.cmake  FindICU.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindOwnICU.cmake  FindOwnMySQL.cmake  FindOwnOpenSSL.cmake
data/audio/: race_checkpoint_fast.wv  race_checkpoint_slow.wv  ui_button_click.wv  ui_button_hover.wv
data/audio/mmotee/: book_flip-01.wv  book_flip-02.wv  item_equip.wv  item_pickup.wv  item_sell_buy.wv  license.txt  music_mrpg_colossus.wv  music_mrpg_dungeon.wv  music_mrpg_fantasy.wv  music_mrpg_festival.wv  music_mrpg_forest.wv  music_mrpg_house.wv  ui_button_click.wv  ui_button_hover.wv  ui_key_press.wv  ui_selection_click.wv
data/fonts/: LICENSE  VERSION  index.json
data/skins/: Eviltee.json  Flokes.json  Greeny.json  Grey_flokes.json  Mr. Moustache.json  Puar.json  Sunglasses.json  Toykeb.json  Trela.json  Trey.json  Treytop.json  bluekitty.json  limedog.json  limekitty.json  redz.json
data/ui/themes/: mmo.map
datasrc/: compile.py  content.py  datatypes.py  network.py
datasrc/cursor/: Thumbs.db
discord_deps/: linux-install.txt  need update it.txt  windows-install.txt
discord_deps/php-scripts/imagegen/: functions.php  gentee.php
discord_deps/sleepy-discord/sleepy_discord/: client.cpp  default_functions.cpp  endpoints.cpp  slash_commands.cpp  stage_instance.cpp  zlib-ng_compression.cpp  zlib_compression.cpp
maps/: README.md  information.txt  worlds.json
maps/0-Chapter/: 1-Way to the Elfinia.map
maps/1-Chapter/: 2-Elfinia.map  3-Elfinia Deep cave.map  4-Elfia home room.map  5-Elfinia occupation of goblins.map  7-Diana home room.map
maps/2-Chapter/: 11-Kugan.map  11-Yugasaki.map  9-Departure.map
maps/Dungeons/: 10-Underwater of Neptune.map  6-Elfinia Abandoned mine.map  8-Noctis Resonance.map
other/: README.md
other/boost/: boost.lua
other/curl/: VERSION  VERSIONS
other/icons/: mmoteeworlds.aps
other/icu/: VERSION
other/opus/: VERSIONS
other/sdl/: VERSION
php-scripts/imagegen/: gentee.php
scripts/: build.py  download.py  make_release.py  tw_api.py
server_lang/: README.txt  cn-b.json  cn.json  de.json  index.json  ru.json
src/base/: color.h  hash.c  hash.h  hash_bundled.c  hash_ctxt.h  hash_openssl.c  math.h  stdafx.h  stringable_enum.h  system.c  system.h  threadpool.h  vmath.h
src/base/another/: kurhelper.cpp  kurhelper.h
src/base/tl/: algorithm.h  allocator.h  array.h  base.h  sorted_array.h  string.h  threading.h
src/engine/: client.h  console.h  contacts.h  demo.h  discord.h  e_translate.cpp  editor.h  graphics.h  input.h  kernel.h  keys.h  map.h  server.h  serverbrowser.h  storage.h  textrender.h
src/engine/client/: backend_sdl.cpp  backend_sdl.h  client.cpp  client.h  client.rar  contacts.cpp  contacts.h  discord.cpp  discord.h  glshader.cpp  graphics_threaded.cpp  graphics_threaded.h  http.cpp  http.h  input.cpp  input.h  keynames.h  serverbrowser.cpp  serverbrowser.h  serverbrowser_fav.cpp  serverbrowser_fav.h  serverbrowser_filter.cpp  serverbrowser_filter.h  sound.cpp  sound.h  text.cpp  textrender.cpp  textrender.h  updater.cpp  updater.h
src/engine/server/: discord_main.cpp  discord_main.h  multi_worlds.cpp  multi_worlds.h  register.cpp  server.cpp  server.h  server_ban.cpp  server_ban.h  snapshot_ids_pool.cpp  snapshot_ids_pool.h  sql_connect_pool.cpp  sql_connect_pool.h  sql_string_helpers.cpp  sql_string_helpers.h
src/engine/shared/: compression.cpp  compression.h  config.cpp  config.h  config_variables.h  console.cpp  console.h  crash_handler.cpp  crash_handler.h  datafile.cpp  datafile.h  demo.cpp  demo.h  econ.cpp  econ.h  engine.cpp  filecollection.cpp  filecollection.h  huffman.cpp  huffman.h  jobs.cpp  jobs.h  jsonwriter.cpp  jsonwriter.h  kernel.cpp  linereader.cpp  linereader.h  map.cpp  mapchecker.cpp  mapchecker.h  masterserver.cpp  memheap.cpp  mmodata.cpp  mmodata.h  netban.cpp  netban.h  network.cpp  network.h  network_client.cpp  network_conn.cpp  (+11 more)
src/game/: collision.cpp  collision.h  commands.h  data_structures.h  enum_context.h  enum_global.h  game_context.h  gamecore.cpp  gamecore.h  layers.cpp  layers.h  mapitems.h  variables.h  version.h  voting.cpp  voting.h
src/game/client/: anim_ui.cpp  anim_ui.h  animstate.cpp  animstate.h  component.h  gameclient.cpp  gameclient.h  lineinput.cpp  localization.cpp  localization.h  render.cpp  render.h  render_map.cpp  ui.cpp  ui.h  ui_window.cpp  ui_window.h
src/game/editor/: auto_map.cpp  auto_map.h  editor.cpp  editor.h  io.cpp  layer_game.cpp  layer_quads.cpp  layer_tiles.cpp  popups.cpp
src/game/server/: alloc.cpp  alloc.h  entity.cpp  entity.h  enum_context.h  enum_global.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gameworld.cpp  gameworld.h  player.cpp  player.h  player_bot.cpp  player_bot.h  playerbot.cpp  playerbot.h  typedef_struct.h
src/mastersrv/: mastersrv.cpp
src/osxlaunch/: client.m
src/teeother/: stdafx_client.h  stdafx_server.h  stdafx_shared.h
src/teeother/components/: localization.cpp  localization.cppX  localization.h
src/teeother/sleepy_discord/: client.cpp  client.h  common_return_types.h  default_functions.cpp  discord_object_interface.h  endpoints.cpp  http.h  json_wrapper.cpp  json_wrapper.h  jsond.cpp  jsond.h  message.cpp  message.h  permissions.cpp  sd_error.cpp  standard_config.h  standard_config_header.h  user.h  version.h  voice_connection.cpp  (+3 more)
src/test/: fs.cpp  git_revision.cpp  hash.cpp  percent.cpp  storage.cpp  str.cpp  test.cpp  thread.cpp
src/tools/: crapnet.cpp  fake_server.cpp  hash_password.cpp  map_resave.cpp  map_version.cpp
src/versionsrv/: mapversions.h  versionsrv.cpp  versionsrv.h
(+457 files in other folders)
